# brenn-pod

./: .gitignore  .gitleaks.toml  CHANGELOG.md  CLAUDE.md  Makefile  NOTICE  README.md  TODO.md
.claude/: settings.json
.claude/hooks/: format.sh  scrub-check.sh
.githooks/: pre-commit  pre-push  self-test.sh
.github/workflows/: ci.yml
docs/reference/: README.md  audio-and-channels.md  firmware-toolchain.md  hardware-reference.md  xvf3800-control-protocol.md
firmware/: .gitignore  Cargo.toml  Makefile  README.md  rust-toolchain.toml
firmware/.cargo/: config.toml
firmware/crates/audio-pipeline/: Cargo.toml
firmware/crates/audio-pipeline/src/: lib.rs  pace.rs  playback.rs  ring.rs  stream_send.rs  test_support.rs  vad.rs  wire.rs
firmware/crates/build-id/: Cargo.toml  build.rs
firmware/crates/build-id/src/: lib.rs
firmware/crates/device-protocol/: Cargo.toml
firmware/crates/device-protocol/src/: console.rs  lib.rs  log_tokens.rs
firmware/crates/device-protocol/tests/: dep_graph.rs
firmware/crates/hil-host/: Cargo.toml
firmware/crates/hil-host/src/: main.rs
firmware/crates/pod-transport/: Cargo.toml
firmware/crates/pod-transport/src/: lib.rs  test_support.rs
firmware/crates/podctl/: Cargo.toml
firmware/crates/podctl/src/: main.rs
firmware/crates/truncfmt/: Cargo.toml
firmware/crates/truncfmt/src/: lib.rs
firmware/crates/wifi-diag/: Cargo.toml
firmware/crates/wifi-diag/src/: lib.rs
firmware/crates/wifi-reconnect/: Cargo.toml
firmware/crates/wifi-reconnect/src/: lib.rs
firmware/devices/respeaker-pod/: Cargo.toml  build.rs  partitions.csv  rust-toolchain.toml  sdkconfig.defaults
firmware/devices/respeaker-pod/.cargo/: config.toml
firmware/devices/respeaker-pod/src/: aic3104.rs  alloc_probe.rs  capture.rs  console.rs  gpio.rs  health.rs  hil.rs  hil_session.rs  i2c.rs  inbound.rs  main.rs  net_tests.rs  netpoll.rs  nvs.rs  psram.rs  speaker.rs  streamer.rs  telemetry.rs  tls_link.rs  wifi.rs  xvf3800.rs
firmware/docs/: setup.md
firmware/tools/: check-realign-args.sh  check-realign-args.test.sh
firmware/udev/: 99-respeaker-xvf3800.rules  99-xiao-esp32s3.rules
host/: Cargo.toml  Makefile  rust-toolchain.toml  speaches-up.sh
host/crates/pod-ingest/: Cargo.toml
host/crates/pod-ingest/src/: clock.rs  framelog.rs  lib.rs  readback.rs  segref.rs  session.rs  synth.rs  test_fixtures.rs
host/crates/pod-ingest/tests/: dep_graph.rs
host/crates/speech-pipeline/: Cargo.toml
host/crates/speech-pipeline/src/: assembler.rs  brain.rs  echo_brain.rs  lib.rs  playback.rs  queue.rs  stats.rs  test_support.rs  tracking.rs  traits.rs  types.rs  wav.rs  wav_brain.rs
host/crates/speech-pipeline/src/http/: mod.rs  stt.rs  test_support.rs  tts.rs
host/crates/speech-pipeline/src/listener/: endpointer.rs  event.rs  mod.rs  ort_util.rs  oww_stream.rs  ring.rs  runtime.rs  silero.rs  stats.rs
host/crates/speech-pipeline/src/wake/: mod.rs  oww.rs
host/crates/speech-surface/: Cargo.toml
host/crates/speech-surface/src/: barge.rs  clip.rs  config.rs  console.rs  exit.rs  jsonl.rs  lib.rs  pipeline.rs  playback_router.rs  prune.rs  psk.rs  recorder.rs  replay.rs  server.rs
host/crates/speech-surface/tests/: barge_integration.rs  listener_replay.rs  parrot_integration.rs  playback_integration.rs  replay_roundtrip.rs  wake_integration.rs
host/crates/speech-surface/tests/common/: mod.rs
host/crates/speech-surface/tests/fixtures/: short-capture.framelog
host/models/: fetch.sh
host/models/oww/: README.md
host/models/silero/: README.md
host/testdata/wake/: .gitignore  README.md
scripts/: check-edition.sh  check.sh  hil-firewall.sh  test-check-edition.sh  test-hil-firewall.sh
